@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.5-2
-Date: 2025-07-22
+Version: 3.5-2.001
+Date: 2025-09-03
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
