@@ -377,6 +377,7 @@ export("pcf.fv")
 export("pcfinhom")
 export("pcfmulti")
 export("pcfmulti.inhom")
+export("pcf.NAobject")
 export("pcf.ppp")
 export("plot.bermantest")
 export("plot.bw.frac")
@@ -672,6 +673,7 @@ S3method("pairs", "listof")
 S3method("pairs", "solist")
  S3method("pcf", "fasp")
   S3method("pcf", "fv")
+S3method("pcf", "NAobject")
   S3method("pcf", "ppp")
 S3method("plot", "bermantest")
 S3method("plot", "bw.frac")
