@@ -14,7 +14,7 @@
 
 Kmeasure <- function(X, sigma, edge=TRUE, ..., varcov=NULL) {
   stopifnot(is.ppp(X))
-  
+  if(is.NAobject(X)) return(NAobject("im"))
   sigma.given <- !missing(sigma) && !is.null(sigma)
   varcov.given <- !is.null(varcov)
   ngiven <- sigma.given + varcov.given
@@ -47,6 +47,7 @@ second.moment.calc <- function(x, sigma=NULL, edge=TRUE,
                                ...,
                                varcov=NULL, expand=FALSE,
                                obswin, npts=NULL, debug=FALSE) {
+  if(is.NAobject(x)) return(NAobject("im"))
   if(is.null(sigma) && is.null(varcov))
     stop("must specify sigma or varcov")
   obswin.given <- !missing(obswin)
@@ -158,6 +159,7 @@ second.moment.engine <-
            obswin = as.owin(x), varcov=NULL,
            npts=NULL, debug=FALSE, fastgauss=FALSE)
 {
+  if(is.NAobject(x)) return(NAobject("im"))
   what <- match.arg(what)
   validate2Dkernel(kernel)
   obswin.given <- !missing(obswin) && !is.null(obswin)
