@@ -21,7 +21,7 @@ cat(paste("--------- Executing",
 #'                    and idw, adaptive.density, intensity
 #'                    and SpatialMedian, SpatialQuantile
 #'
-#'  $Revision: 1.67 $  $Date: 2024/01/29 07:07:16 $
+#'  $Revision: 1.70 $  $Date: 2025/07/27 07:21:08 $
 #'
 
 if(!FULLTEST)
