@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.explore VERSION 3.5-2.001
+
+OVERVIEW
+
+    o Summary functions handle NA objects.
+    
+
         CHANGES IN spatstat.explore VERSION 3.5-2
 
 OVERVIEW
